# datapipo

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
infra/spark/conf/: spark-defaults.conf
infra/trino/catalog/: iceberg.properties
lakehouse/bronze/moltbook/: posts_top1000.jsonl
lakehouse/gold/moltbook/: authors_summary.csv
lakehouse/silver/moltbook/: posts_top1000.csv
sample/: moltbook_top1000_posts.xlsx
scripts/: extract_moltbook_sample.ps1
src/lakehouse/: __init__.py  cli.py  config.py  layout.py  models.py
src/lakehouse/io/: workbook.py  writers.py
src/lakehouse/pipelines/: moltbook.py
src/lakehouse/transforms/: __init__.py  moltbook.py
