[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-lakehouse"
version = "0.1.0"
description = "Local lakehouse ETL baseline"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
spark-lakehouse = "lakehouse.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
